# tomoGPI

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
Data3D_0256/: run_ND.sh
Data3D_0256/Projections_256/: configCT  configComputeArchitecture  configIteration  configTiff
Matlab/Tomo8/: DerivHuber.m  Iter3D.m  TP_TomoBayes.m  crit_TOMO8.m  demo_TOMO8.m  demo_TOMO8_HCERES.m  demo_TOMO8_Nicolas.m  demo_TOMO8_recherche_lambda.m  demo_TPGPI.m  gradient_GCH_TOMO8.m  gradient_JMAP_TOMO8.m  huber.m  iter3D_add_noise_r_TOMO8.m  iter3D_reconstruction_TOMO8.m  ramp_filter_TOMO8.m  sauvegarde_projection_TOMO8.m  sauvegarde_volume_TOMO8.m
batch_bebe2/: go.sh
batch_ruche/: CMakeCache.txt  TomoBayes_ngpu.sh  batch_compilation.sh  batch_run.sh  batch_test.sh  compilation.sh  go.sh  run.sh  srun.sh
common/: readme.css
common/inc/AOCLUtils/: opencl.h
common/src/AOCLUtils/: opencl.cpp
configFiles/: configCT  configComputeArchitecture  configIteration  configTiff
script/: .#analyse_Asier.sh  analyse_TOMO8.sh  analyse_iter_lambda.sh  analyse_plot.sh  analyse_plot_J_JMC_Jreg.sh  analyse_plot_alpha.sh  analyse_plot_eam.sh  configuration_PC.sh  configuration_PC_bebe2.sh  configuration_rep.sh  configuration_rep_777.sh  install_gcc.sh  install_tomo_gpi.sh  switch_gcc.sh  test_C.sh  test_rep.sh  tests_Asier.sh
src/TomoGPI_exe/: TomoGPI_exe.cu
src/TomoGPI_lib/inc/: Acquisition.hpp  BackProjector.cuh  BackProjector_CPU.cuh  BackProjector_GPU.cuh  BackProjector_instances.cu  BackProjector_instances_CPU.cu  BackProjector_instances_GPU.cu  BackProjector_kernel.cuh  ComputingArchitecture.cuh  Convolution3D.cuh  Convolution3D_CPU.cuh  Convolution3D_GPU.cuh  Convolution3D_instances.cu  Convolution3D_instances_CPU.cu  Convolution3D_instances_GPU.cu  Convolution3D_kernel.cuh  Detector.hpp  FieldOfView.hpp  GPUConstant.cuh  GeneralizedGaussianRegularizer_CPU.cuh  GeneralizedGaussianRegularizer_GPU.cuh  GeneralizedGaussianRegularizer_instances_CPU.cu  GeneralizedGaussianRegularizer_instances_GPU.cu  HuberRegularizer_CPU.cuh  HuberRegularizer_GPU.cuh  HuberRegularizer_instances_CPU.cu  HuberRegularizer_instances_GPU.cu  Image3D.cuh  Image3D_CPU.cuh  Image3D_CPU_half.cuh  Image3D_GPU.cuh  Image3D_MGPU.cuh  Image3D_instances.cu  Image3D_instances_CPU.cu  Image3D_instances_GPU.cu  Iter3D.cuh  Iter3D_CPU.cuh  Iter3D_GPU.cuh  Iter3D_instances_CPU.cu  Iter3D_instances_GPU.cu  (+24 more)
src/TomoGPI_lib/inc/Config/: Config.hpp  ConfigCT.hpp  ConfigComputeArchitecture.hpp  ConfigIteration.hpp  ConfigTiff.hpp
src/TomoGPI_lib/src/CPP/: Acquisition.cpp  BackProjector.cu  BackProjector_half.cu  ComputingArchitecture.cpp  Convolution3D.cu  Convolution3D_CPU_GPU.cu  Detector.cpp  FieldOfView.cpp  GeneralizedGaussianRegularizer_CPU.cu  GeneralizedGaussianRegularizer_GPU.cu  HuberRegularizer_CPU.cu  Image3D.cu  (+34 more)
src/TomoGPI_mex/: Mex.cu  Mex.cuh  TomoGPI_iter_mex.cu
(+66 files in other folders)
